--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
-    <link rel="stylesheet" href="/Users\Mystic_HKx\OneDrive\Desktop\odin-recipes\css\style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id = "title">Odin Recipes</div>
-    <h2><p><a href="recipes/lasagna.html"> <div id="contents"> Lasagna </div></a></h2></p>
+    <h2><p><a href="lasagna.html"> <div id="contents"> Lasagna </div></a></h2></p>
     
-    <img src="\Users\Mystic_HKx\OneDrive\Desktop\odin-recipes\img\lasicon.jpg" class="image1">
+    <img src="lasicon.jpg" class="image1">
 
-    <img src="\Users\Mystic_HKx\OneDrive\Desktop\odin-recipes\img\pza.jpg" class="image2">
+    <img src="pza.jpg" class="image2">
     
-    <h2><p><a href="recipes/pizza.html"> <div id="contents">Pizza</div></a></p></h2>
+    <h2><p><a href="pizza.html"> <div id="contents">Pizza</div></a></p></h2>
 </body>
 </html>
