--- a/lasagna.html
+++ b/lasagna.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Lasagna</title>
-    <link rel="stylesheet" href="/Users\Mystic_HKx\OneDrive\Desktop\odin-recipes\css\style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style = "color: blue; background-color: rgb(255, 255, 255); text-align: center; font-size: 65px;"><p><a href="/Users/Mystic_HKx/OneDrive/Desktop/odin-recipes/index.html">Homepage</a></p></h1>     <h1><em>Lasagna</em></h1>           
+    <h1 style = "color: blue; background-color: rgb(255, 255, 255); text-align: center; font-size: 65px;"><p><a href="index.html">Homepage</a></p></h1>     <h1><em>Lasagna</em></h1>           
     <h3>How to make the worlds best Lasagna</h3>
     <p style = "color: blueviolet; font-size: 30px;">Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:</p>
-    <img src= "/Users/Mystic_HKx/OneDrive/Desktop/odin-recipes/img/las.jpg" width ="600" length = "600" alt ="Image of lasagna">
+    <img src= "las.jpg" width ="600" length = "600" alt ="Image of lasagna">
 
 <p>Ingredients You Will Need </p>
 <p>All ingredients below can be purchased at Sainsburys :)</p>
