--- a/pizza.html
+++ b/pizza.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How to make Pizza</title>
-    <link rel="stylesheet" href="/Users\Mystic_HKx\OneDrive\Desktop\odin-recipes\css\style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <body id="page1">
         
     </body>
-    <h1><p><a href="/Users/Mystic_HKx/OneDrive/Desktop/odin-recipes/index.html">Homepage</a></p></h1>     <h1><em>Pizza</em></h1>
+    <h1><p><a href="index.html">Homepage</a></p></h1>     <h1><em>Pizza</em></h1>
     <h3>How to make pizza</h3>
     <p>The nicest dish known to the human race:</p>
-    <img src="\Users\Mystic_HKx\OneDrive\Desktop\odin-recipes\img\pizza.jpg" width = "600" length = "600" alt="image of pizza">
+    <img src="pizza.jpg" width = "600" length = "600" alt="image of pizza">
     
     <p>This is a very simple... recipe, all you require is a phone</p>
 <h3>Lets begin</h3>
